1999-11-30  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tclLoad.c: #def'd out the unloading of DLLs at finalize
	time for Unix in TclFinalizeLoad. [Bug: 2560 3373]  Should be
	parametrized to allow for user to specify unload or not.

	* win/tclWinTime.c: fixed handling of %Z on NT for time zones
	that don't have DST.

1999-11-29  Jeff Hobbs  <hobbs@scriptics.com>

	* library/dde1.1/pkgIndex.tcl:
	* library/reg1.0/pkgIndex.tcl: added supported for debugged
	versions of the libraries

	* unix/tclUnixPipe.c: fixed PipeBlockModeProc to properly set
	isNonBlocking flag on pipe. [Bug: 1356 710]
	removed spurious fcntl call from PipeBlockModeProc

	* tests/scan.test:
	* generic/tclScan.c: fixed scan where %[..] didn't match anything
	and added test case [Bug: 3700]

1999-11-24  Jeff Hobbs  <hobbs@scriptics.com>

	* doc/open.n:
	* win/tclWinSerial.c: adopted patch from Schroedter to handle
	fconfigure $sock -lasterror on Windows. [RFE: 3368]

	* generic/tclCmdIL.c: made SORTMODE_INTEGER work with Longs
	[Bug: 3652]

1999-11-23  Scott Stanton  <stanton@scriptics.com>

	* library/tcltest1.0/tcltest.tcl: Fixed bug where tcltest output
	went to stdout instead of the specified output file in some
	cases.

1999-11-19  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tclProc.c: backed out change from 1999-11-18 as it
	could affect return string from upvar as well.

	* tools/tcl.wse.in: added tcltest1.0 library to distribution list

	* doc/http.n:
	* library/http2.1/http.tcl:
	* library/http2.1/pkgIndex.tcl: updated http package to 2.2

1999-11-18  Jeff Hobbs  <hobbs@scriptics.com>

	* unix/tcl.m4: added defined for _THREAD_SAFE in --enable-threads
	case; added check for pthread_mutex_init in libc; in AIX case,
	with --enable-threads ${CC}_r is used; fixed flags when using gcc
	on SCO

	* generic/tclProc.c: corrected error reporting for default case
	at the global level for uplevel command.

	* generic/tclIOSock.c: changed int to size_t type for len
	in TclSockMinimumBuffers.
